# seikyusyo2

./: .gitignore  CLINE.md  EXCEL_シート分割方針.txt  JSON-to-csv（LLMベース）.py  README.md  cline_task_feb-15-2025_3-24-49-pm.md  main.py  md_text (1).txt  openssl.cnf  pyproject.toml  requirements.txt  startup.sh  起動.txt
docs/: ap.md  handover.md  openapi.json
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: DetailDialog.tsx  DetailList.tsx  ExcelExportButton.tsx  FileUpload.tsx  ValidationResults.tsx
frontend/src/services/: api.ts
frontend/src/store/: documentStore.ts
frontend/src/types/: file-system.d.ts
invoice-system/: .gitignore  api_client.py  icons.py  main.py
old/: CLINE.md  CLINEbackuo.md  基本設計書.md
old/invoice-system-pyside6/: api_client.py  main.py
old/invoice-validation/: package.json
old/invoice-validation/app/: page.tsx
old/invoice-validation/components/: pdf-preview-pane.tsx  structured-data-table.tsx  validation-controls.tsx
old/invoice-validation/types/: invoice.ts
src/: .env.example  __init__.py  requirements.txt  startup.py  startup.txt  test_api.py  test_openai.py
src/api/: __init__.py  main.py
src/api/routers/: __init__.py  approval.py  document.py
src/components/: DetailDialog.tsx
src/core/: __init__.py  error_handler.py  errors.py  excel_exporter.py  exceptions.py  image_processor.py  mappings.py  pdf_parser.py  structuring.py  validation.py
src/models/: __init__.py  approval.py  document.py
src/takatuski/: core  utils
src/takatuski/api/: __init__.py  document.py  main.py
src/utils/: __init__.py  config.py  cosmos.py  logger.py  temp_file_manager.py  temp_manager.py  text_processing.py
tests/: __init__.py  conftest.py
tests/core/: test_error_handler.py
tests/unit/api/: test_document.py
tests/unit/core/: test_excel_exporter.py  test_image_processor.py  test_pdf_parser.py  test_structuring.py  test_validation.py
tests/unit/models/: test_document_model.py
tests/unit/utils/: test_config.py  test_logger.py  test_temp_file_manager.py
