[project]
name = "takatuski"
version = "0.1.0"
description = "請求書構造化システム"
authors = [
    { name = "LGMorimasa", email = "morimasa@nttlogisco.com" }
]
dependencies = [
    "pyside6>=6.8.2.1",
    "fastapi>=0.115.8",
    "uvicorn>=0.34.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.20",
    "pydantic>=2.10.6",
    "azure-cosmos>=4.5.1",
    "python-jose[cryptography]>=3.3.0",
    "azure-storage-blob>=12.19.0",
    "pdfminer.six>=20221105",
    "pillow>=11.1.0",
    "pymupdf>=1.25.3",
    # PDFの画像抽出用
    "openpyxl>=3.1.2",
    "python-dotenv>=1.0.1",
    "openai>=1.63.0",
    "pytesseract>=0.3.10",
    "pdfminer-six>=20240706",
    "requests>=2.32.3",
    # OCR機能用
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/takatuski"]
